--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,13 +8,17 @@
 .error-card{
     margin-top: 50%;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .error-icon{
     height: 100px;
     width: 100px;
 }
 ion-content{
-    
+    display: flex;
+    flex-wrap: wrap;
       --background: none;
       // background-image: linear-gradient(to bottom right, #f4b400 , #db4437);
       background: url('../../../assets/images/bg.jpg'); 
@@ -22,50 +26,101 @@ ion-content{
       background-repeat: no-repeat;
       background-repeat: no-repeat;
       background-size: 100% 100%;
+
+    // @media (min-width: 480px) {
+    //     ion-content {
+    //         background-image: linear-gradient(to bottom , #f4b400 , #db4437);
+    //     }
+    // }
       
-    @media (max-width: 576px) {
+    // @media (max-width: 576px) {
 
-        .error-card{
-            margin-top: 20%;
-            text-align: center;
-        }
-        ion-card-content {
-            font-size: 2rem !important;
-        }
-    }
+    //     .error-card{
+    //         margin-top: 20%;
+    //         text-align: center;
+    //     }
+    // }
  
-    @media (max-width: 820px) {
-        .error-card{
-            margin-top: 20%;
-            text-align: center;
-        }
-        .mobile-fab {
-            display: none;
-        }
-    }
+    // @media (max-width: 820px) {
+    //     .error-card{
+    //         margin-top: 20%;
+    //         text-align: center;
+    //     }
+    //     .mobile-fab {
+    //         display: none;
+    //     }
+    // }
  
-    @media (min-width: 768px) {
-        .error-card{
-            margin-top: 10%;
-            text-align: center;
-        }
-        .web-fab {
-            display: none;
-        }
+    // @media (min-width: 768px) {
+    //     .error-card{
+    //         margin-top: 10%;
+    //         text-align: center;
+    //     }
+    //     .web-fab {
+    //         display: none;
+    //     }
+    // }
+
+    // @media (min-width: 1060px) {
+    //     ion-button{
+    //         // width: 30%;
+    //     }
+    //     .error-card{
+    //         margin-top: 0%;
+    //         text-align: center;
+    //     }
+    //     .web-fab {
+    //         display: none;
+    //     }
+    // }
+
+
+    /* Mobile Styles */
+@media only screen and (max-width: 400px) {
+    .error-card {
+        margin-top: calcu(10%);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    @media (min-width: 1060px) {
-        ion-button{
-            width: 30%;
-        }
-        .error-card{
-            margin-top: 0%;
-            text-align: center;
-        }
-        .web-fab {
-            display: none;
-        }
+    .error-card ion-button {
+
     }
+  }
+  
+  /* Tablet Styles */
+  @media only screen and (min-width: 401px) and (max-width: 960px) {
+    .error-card {
+        margin-top: calcu(20%);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .error-card ion-button {
+        
+    }
+  }
+  
+  /* Desktop Styles */
+  @media only screen and (min-width: 961px) {
+    .error-card {
+        margin-top: calcu(30%);
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .error-card ion-button {
+        
+    }
+  }
+    
+   
     // --background: linear-gradient(to bottom, #04619f 0%, #000000 74%) !important;
     // background-image: linear-gradient(147deg, #000000 0%, #04619f 74%) !important;
     // background-color: #000000;
@@ -83,9 +138,31 @@ ion-content{
     border-radius: 32px;
 }
 .header-row{
-    background: #80808052;
+    // background: #80808052;
     border-radius: 2px;
 }
 .url-input-search-css{
     color: white;
+}
+.search-button{
+    padding: 5px;
+    --background: transparent;
+    margin-right: 1px;
+}
+.search-icon {
+    color: white;
+    padding-right: 15px;
+}
+.quick-url-card{
+    text-align: -webkit-center;
+}
+
+div ion-grid ion-row ion-col ion-card{
+    width: 112px;
+    height: 112px;
+    color: rgb(255, 255, 255,1);
+}
+img{
+    height: 48px;
+    width: 48px;
 }
