--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -17,11 +17,20 @@
     width: 100px;
 }
 ion-content{
-    display: flex;
+  --background: none;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: consolas;
+
     flex-wrap: wrap;
       --background: none;
       // background-image: linear-gradient(to bottom right, #f4b400 , #db4437);
-      background: url('../../../assets/images/bg.jpg'); 
+      // background: url('../../../assets/images/bg.jpg'); 
       background-position: center top;
       background-repeat: no-repeat;
       background-repeat: no-repeat;
@@ -84,9 +93,10 @@ ion-content{
         justify-content: center;
         align-items: center;
     }
-
-    .error-card ion-button {
-
+    .quick-url-card ion-col{
+      flex: 0 0 calc(calc(6 / var(--ion-grid-columns, 12)) * 100%);
+      width: calc(calc(6 / var(--ion-grid-columns, 12)) * 100%);
+      max-width: calc(calc(6 / var(--ion-grid-columns, 12)) * 100%);
     }
   }
   
@@ -99,9 +109,10 @@ ion-content{
         justify-content: center;
         align-items: center;
     }
-
-    .error-card ion-button {
-        
+    .quick-url-card ion-col{
+      flex: 0 0 calc(calc(6 / var(--ion-grid-columns, 12)) * 100%);
+      width: calc(calc(6 / var(--ion-grid-columns, 12)) * 100%);
+      max-width: calc(calc(6 / var(--ion-grid-columns, 12)) * 100%);
     }
   }
   
@@ -114,9 +125,10 @@ ion-content{
         justify-content: center;
         align-items: center;
     }
-
-    .error-card ion-button {
-        
+    .quick-url-card {
+    padding-top: 4%;
+    padding-left: 15%;
+    padding-right: 15%;
     }
   }
     
@@ -134,7 +146,7 @@ ion-content{
 .search-item-css{
     --background: transparent;
     color: white;
-    box-shadow: 0px 0px 50px 18px #0ff;
+    box-shadow: 0px 0px 30px -5px #0ff;
     border-radius: 32px;
 }
 .header-row{
@@ -155,8 +167,36 @@ ion-content{
 }
 .quick-url-card{
     text-align: -webkit-center;
+    padding-top: 4%;
+    padding-left: 15%;
+    padding-right: 15%;
 }
+.quick-url-card ion-card {
+  background: transparent;
+  color : white;
+}
+.quick-url-card ion-card ion-card-content {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+.quick-url-card ion-card ion-card-content ion-item {
+  height: 40px;
+ }
+ .quick-url-card ion-card ion-card-content ion-item ion-icon{
+  color: grey;;
+  margin: 0px;
+ }
 
+.quick-url-card ion-card:hover {
+  background: transparent;
+  box-shadow: 0px 0px 30px -5px #0ff;
+  color : white;
+  font-size: large;
+}
+.quick-url-card ion-item {
+  --background: transparent;
+}
 div ion-grid ion-row ion-col ion-card{
     width: 112px;
     height: 112px;
@@ -165,4 +205,161 @@ div ion-grid ion-row ion-col ion-card{
 img{
     height: 48px;
     width: 48px;
+}
+
+
+.spinner {
+    margin: 100px auto;
+    width: 50px;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
+  }
+  
+  .spinner div {
+    background-color: #ffffff;
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+    
+    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  }
+  
+  .spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+  }
+  
+  .spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+  }
+  
+  .spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+  }
+  
+  .spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+  }
+  
+  @-webkit-keyframes sk-stretchdelay {
+    0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+    20% { -webkit-transform: scaleY(1.0) }
+  }
+  
+  @keyframes sk-stretchdelay {
+    0%, 40%, 100% { 
+      transform: scaleY(0.4);
+      -webkit-transform: scaleY(0.4);
+    }  20% { 
+      transform: scaleY(1.0);
+      -webkit-transform: scaleY(1.0);
+    }
+  }
+
+
+
+
+
+
+
+  
+img{
+  // height: 80px;
+  // width: 80px;
+}
+
+.container{
+  // width: 1000px;
+  // position: relative;
+  // display: flex;
+  // justify-content: space-between;
+}
+
+.container .card {
+  position: relative;
+}
+
+.container .card .face {
+  width: 300px;
+  height: 200px;
+  transition: 0.5s;
+}
+
+.container .card .face.face1 {
+  position: relative;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.container .card:hover .face.face1 {
+  background: #ff0057;
+  transform: translateY(0)
+}
+
+.container .card .face.face1 .content{
+  opacity: 0.2;
+  transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content {
+  opacity: 1;
+}
+.container .card:hover .face.face1 .content img {
+  max-width: 100px;
+}
+
+.container .card:hover .face.face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+
+
+
+.container .card .face.face2 {
+  position: relative;
+  background: #fff;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0,0,0.8);
+  transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2 {
+  transform: translateY(0);
+}
+
+.container .card .face.face2 .content p {
+  margin: 0;
+  padding: 0;
+}
+
+.container .card .face.face2 .content a {
+  margin: 15xpx 0 0;
+  display: inline-block;
+
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 1px solid #333
+}
+
+.container .card .face.face2 .content a:hover {
+  background: #333;
+  color: #fff;
 }
