--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,6 @@
     <div class="sk-cube sk-cube9"></div>
   </div>
 </div>
-<ion-app>
+<ion-app *ngIf="!showSplash">
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
