--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../../resources/android/splash/drawable-land-xxxhdpi-screen.png');
+    background-image: url('../assets/images/back_ground.jpg');
   }
 
   .sk-cube-grid {
