--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,9 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+ion-content{
+    --background: url('./assets/images/back_ground.jpg') !important;
+}
 
 ion-popover .popover-wrapper .popover-content{
     // width: 30%;
